--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
          ной статье,ну и так же я хочу показать как Россия относит
          ся к персональным данным своих граждан. <br>
         <br>Приступим к получению qiwi-кошелька со статусом "Основной"<br>
-        <br>1.1 Открываем мой любимый сайт реестра залогов <a href="#">
+        <br>1.1 Открываем мой любимый сайт реестра залогов <a href="https://www.reestr-zalogov.ru/search/index">
             https://www.reestr-zalogov.ru/search/index</a> <br>
             <p><p>1.2 Нажимаем на кнопку "Найти в реестре", затем кнопку "По инфор
                 мации о залогодатели", после "Физическое лицо"</p></p>
@@ -52,7 +52,7 @@
    <p>2.2 Вводим данные</p>
    <p>2.3 Вы получили "QIWI" со статусом "Основной"</p>
    <p>ИНН указанный в документе ложный, узнать настоящ
-    ий ИНН можно тут <a href="#">https://service.nalog.ru/inn.do</a> </p>
+    ий ИНН можно тут <a href="https://service.nalog.ru/inn.do">https://service.nalog.ru/inn.do</a> </p>
 
 
     </div>
