--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
          ной статье,ну и так же я хочу показать как Россия относит
          ся к персональным данным своих граждан. <br>
         <br>Приступим к получению qiwi-кошелька со статусом "Основной"<br>
-        <br>1.1 Открываем мой любимый сайт реестра залогов <a href="https://www.reestr-zalogov.ru/search/index"target="_blank>
-            https://www.reestr-zalogov.ru/search/index</a> <br>
+        <br>1.1 Открываем мой любимый сайт реестра залогов <a href="https://www.reestr-zalogov.ru/search/index" target="_blank" >https://www.reestr-zalogov.ru/search/index</a> <br>
             <p><p>1.2 Нажимаем на кнопку "Найти в реестре", затем кнопку "По инфор
                 мации о залогодатели", после "Физическое лицо"</p></p>
                 <p>1.3 Теперь вводим рандомные Имя и Фамилию,и нажимаем кнопку "Найти"</p>
